fix: Add @Repository annotation to repositories